<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Phero Motors</string>
    <string name="signup">Sign Up</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rider">Map</string>
    <string name="title_activity_driver_location">Map</string>
    <string name="title">PheroMotors</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup_button">SIGN UP</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_cars__recycler_">MyCars_Recycler_Activity</string>
    <string name="date_picker">datePicker </string>
    <string name="time_picker">datePicker </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_historia">historia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="choose_delivery_method">Choose a delivery method</string>
    <string name="same_day_messanger_service">Same Day Messanger Service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="nothing_clicked">"onRadioButtonCicked:Nothing Clicked"</string>
    <string name="car_make">make</string>
    <string name="car_model">model</string>
    <string name="car_engine">Engine</string>
    <string name="car_registeration_number">Registeration Number</string>
    <string name="add_car">add car</string>
    <string name="booking_submit">submit</string>
    <string name="booking_time">Time</string>
    <string name="booking_date">Date</string>
    <string name="booking_choose_date_and_time">choose date and time</string>
    <string name="booking_enter_your_car_brand">Enter your Car Brand</string>
    <string name="booking_cars_registeration_no">Enter your Cars Registeration no.</string>
    <string name="booking_vehicle_model">Enter your Vehicle Model</string>
    <string name="booking_phone_number">Enter your Phone Number</string>
    <string name="booking_email_address">Email Address</string>
    <string name="booking_full_name">Full Name</string>
    <string name="signup_update">update</string>
    <string name="fuel_odometer_reading">Enter the Odometer reading</string>
    <string name="fuel_total_cost">Enter Total Cost</string>
    <string name="new_fuel_record">Enter New Fuel Record</string>
    <string name="fuel_car_registeration_number">Enter Car Registeration Number</string>
    <string name="current_fuel_record">Current fuel record.</string>
    <string name="my_fuel_records">My Fuel Records</string>
    <string name="history_service">Service</string>
    <string name="history_fuel">Fuel</string>
    <string name="history">History</string>
    <string name="home_my_past_records">my past records</string>
    <string name="home_my_cars">My Cars</string>
    <string name="home_your_cars">check your cars</string>
    <string name="home_map">map</string>
    <string name="home_locate_warehouse">Locate WareHouse</string>
    <string name="home_booking">Booking</string>
    <string name="home_book_your_car">Book your car for service</string>
    <string name="home_spare_parts">Spare Parts</string>
    <string name="home_order_for_sparert">Order for Spare part</string>
    <string name="home_fuel">Fuel</string>
    <string name="home_record_fuel">Record Fuel</string>
    <string name="login_username">UserName</string>
    <string name="login_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="profile_felix_otieno">Felix Otieno</string>
    <string name="profile_first_name">First Name:</string>
    <string name="profile_felix">felix</string>
    <string name="profile_last_name">Last Name:</string>
    <string name="profile_otieno">Otieno</string>
    <string name="profile_email">Email :</string>
    <string name="proffile_mail_com">felixadams6116@gmail.com</string>
    <string name="car_list_reg_no">Reg No:</string>
    <string name="car_list_plate">plate</string>
    <string name="car_list_engine">Engine:</string>
    <string name="car_Enginee">engine</string>
    <string name="car_list_model">Model:</string>
    <string name="car_title_model">Model</string>
    <string name="car_list_make">Make:</string>
    <string name="car_list_description">description</string>
    <string name="fuel_2000">2000</string>
    <string name="fuel_price">Price:</string>
    <string name="fuel_20_literes">20 literes</string>
    <string name="fuel_fuel">Fuel:</string>
    <string name="fuel_date">10.july.2018</string>
    <string name="fuel_list_date">Date:</string>
    <string name="fuel_plate">KAX</string>
    <string name="fuel_registeration">Registeration:</string>
    <string name="service_eldoret">Eldoret</string>
    <string name="service_branch">Branch:</string>
    <string name="service_day">10.july.2018</string>
    <string name="service_date">Date:</string>
    <string name="service_plate">KAX</string>
    <string name="service_registeration">Registeration:</string>
    <string name="spare_description">Description:</string>
    <string name="sparedescription">description</string>
    <string name="spare_price">Price:</string>
    <string name="spare_1000">1000</string>
    <string name="spare_stock">Stock:</string>
    <string name="spare_available">available</string>
    <string name="change_language">change language</string>
    <string name="fuel_title">Your Fuel Records</string>
    <string name="fuel_history_title">\'s Fuel History</string>
    <string name="history_title">History</string>
    <string name="home_title">Welcome</string>
    <string name="wefoundLocation_map">We found the closest store from you!</string>
    <string name="map2location">It\'s</string>
    <string name="mycars_title">\'s cars</string>
    <string name="profile_title">Your Profile</string>
    <string name="service_title">\'s Service History</string>
    <string name="sparepart_title">Toyota Spare Parts</string>
    <string name="map_uko">.  You are</string>
    <string name="map_diatance">km from this store.</string>
</resources>
