<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">
<de.hdodenhof.circleimageview.CircleImageView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:id="@+id/imageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_list_description"
        android:id="@+id/make"
        android:layout_toRightOf="@+id/Make"
        android:textColor="@color/material_grey_500"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_grey_700"
        android:layout_toRightOf="@+id/imageView"
        android:id="@+id/Make"
        android:text="@string/car_list_make"
        android:layout_marginLeft="40dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_title_model"
        android:id="@+id/model"
        android:layout_toRightOf="@+id/Model"
        android:layout_below="@+id/make"
        android:textColor="@color/material_grey_500"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_grey_700"
        android:layout_toRightOf="@+id/imageView"
        android:id="@+id/Model"
        android:text="@string/car_list_model"
        android:layout_below="@+id/Make"
        android:layout_marginLeft="40dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_Enginee"
        android:id="@+id/engine"
        android:layout_toRightOf="@+id/Engine"
        android:textColor="@color/material_grey_500"
       android:layout_below="@+id/model"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_grey_700"
        android:layout_toRightOf="@+id/imageView"
        android:id="@+id/Engine"
        android:text="@string/car_list_engine"
        android:layout_below="@+id/Model"
        android:layout_marginLeft="40dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_list_plate"
        android:id="@+id/plate"
        android:layout_toRightOf="@+id/Plate"
        android:textColor="@color/material_grey_500"
       android:layout_below="@+id/engine"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_grey_700"
        android:layout_toRightOf="@+id/imageView"
        android:id="@+id/Plate"
        android:text="@string/car_list_reg_no"
        android:layout_below="@+id/Engine"
        android:layout_marginLeft="40dp"
        android:textSize="20sp"/>
</RelativeLayout>