<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_grey_700"
        android:id="@+id/desc"
        android:text="@string/service_registeration"
        android:layout_marginLeft="40dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_plate"
        android:id="@+id/service_registration"
        android:layout_toRightOf="@+id/desc"
        android:textColor="@color/material_grey_500"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_grey_700"
        android:layout_below="@+id/desc"
        android:layout_toRightOf="@+id/spare_imageView"
        android:id="@+id/price"
        android:text="@string/service_date"
        android:layout_marginLeft="40dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_day"
        android:id="@+id/service_date"
        android:layout_toRightOf="@+id/price"
        android:layout_below="@+id/desc"
        android:textColor="@color/material_grey_500"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_grey_700"
        android:layout_toRightOf="@+id/spare_imageView"
        android:layout_below="@+id/price"
        android:paddingRight="10dp"
        android:id="@+id/stock"
        android:text="@string/service_branch"
        android:layout_marginLeft="40dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_eldoret"
        android:paddingLeft="15dp"
        android:id="@+id/service_branch"
        android:layout_toRightOf="@+id/price"
        android:layout_below="@+id/price"
        android:textColor="@color/material_grey_500"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>



</RelativeLayout>