<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.parse.motors.com.phero.starter.profile"
    android:background="@color/material_grey_500"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/material_pink_800"
            android:orientation="vertical"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/unix"
                android:layout_gravity="center"
                android:foregroundGravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userFullName"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="25dp"
                android:paddingTop="10dp"
                android:hint="@string/profile_felix_otieno"/>

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_first_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userFirstName"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:hint="@string/profile_felix"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/secName"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingLeft="20dp"
            android:text="@string/profile_last_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userSecName"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingLeft="20dp"
            android:hint="@string/profile_otieno"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailAddress"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingLeft="20dp"
            android:text="@string/profile_email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userEmail"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            android:paddingLeft="20dp"
            android:hint="@string/proffile_mail_com"/>
    </LinearLayout>



</LinearLayout>