<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_blue_grey_600"
    tools:context="com.parse.motors.com.phero.starter.booking">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp">


            <EditText
                android:id="@+id/fullname"
                android:paddingTop="30dp"
                android:fontFamily="@font/open_sans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="#00000000"
                android:hint="@string/booking_full_name"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="9dp"
                android:background="#E6ffffff" />
            <EditText
                android:id="@+id/car_email"
                android:fontFamily="@font/open_sans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="#00000000"
                android:hint="@string/booking_email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="9dp"
                android:background="#E6ffffff" />
            <EditText
                android:id="@+id/Telephone"
                android:fontFamily="@font/open_sans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="#00000000"
                android:hint="@string/booking_phone_number"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="9dp"
                android:background="#E6ffffff" />
            <EditText
                android:id="@+id/car_model"
                android:fontFamily="@font/open_sans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="#00000000"
                android:hint="@string/booking_vehicle_model"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="9dp"
                android:background="#E6ffffff" />
            <EditText
                android:id="@+id/car_RegNo"
                android:fontFamily="@font/open_sans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="#00000000"
                android:hint="@string/booking_cars_registeration_no"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="9dp"
                android:background="#E6ffffff" />
            <EditText
                android:id="@+id/the_car_brand"
                android:fontFamily="@font/open_sans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="#00000000"
                android:hint="@string/booking_enter_your_car_brand"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="9dp"
                android:background="#E6ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateTime"
                android:text="@string/booking_choose_date_and_time"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff"
                android:paddingTop="20dp"
                android:textSize="18dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/date"
                android:fontFamily="@font/open_sans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#CCffffff"
                android:textSize="13.5dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:letterSpacing="0.1"
                android:text="@string/booking_date"
                android:onClick="date"
                android:background="@drawable/rect_white"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/time"
                android:fontFamily="@font/open_sans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#CCffffff"
                android:textSize="13.5dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:letterSpacing="0.1"
                android:text="@string/booking_time"
                android:onClick="time"
                android:background="@drawable/rect_white"
                android:gravity="center"
                />
                <TextView
                    android:id="@+id/siku"
                    android:fontFamily="@font/open_sans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#CCffffff"
                    android:textSize="13.5dp"
                    android:layout_marginTop="15dp"
                    android:padding="10dp"
                    android:letterSpacing="0.1"
                    android:text=" "
                    android:onClick="time"
                    android:background="@drawable/timerectangle"
                    android:gravity="center"
                    android:visibility="invisible"
                    />
                <TextView
                    android:id="@+id/saa"
                    android:fontFamily="@font/open_sans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#CCffffff"
                    android:textSize="13.5dp"
                    android:layout_marginTop="15dp"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:letterSpacing="0.1"
                    android:text=" "
                    android:onClick="time"
                    android:background="@drawable/timeresourcesaa"
                    android:gravity="center"
                    android:visibility="invisible"

                    />

            </LinearLayout>

            <Spinner
                android:id="@+id/branchSpinner"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                >

            </Spinner>

            <TextView
                android:id="@+id/save"
                android:fontFamily="@font/open_sans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:textColor="#CCffffff"
                android:textSize="13.4sp"
                android:layout_marginTop="15dp"
                android:onClick="submit"
                android:padding="15dp"
                android:letterSpacing="0.3"
                android:text="@string/booking_submit"
                android:clickable="true"
                android:background="@drawable/rect_white"
                android:gravity="center"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>